--- a/index.html
+++ b/index.html
@@ -13,6 +13,52 @@
     </header>
     <main>
       <!-- Student code goes here -->
+      <section class="card" id="html-section">
+          <h2>HTML</h2>
+
+          <ul>
+
+            <li></li>
+            <li></li>
+
+          </ul>
+          
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+
+          <ul>
+
+            <li>DOCTYPE declaration defines that the document is a HTML5 document</li>
+            <li>Head: is the element which contains meta information</li>
+            <li>title: is the element which specifies a title for the html page.</li>
+
+          </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>GIT</h2>
+
+          <ul>
+
+            <li>cn ~directory~: opens the directory in the command line. </li>
+            <li>git status: checks what branch we are currently working on.</li>
+            <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+
+          </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+
+          <ul>
+
+            <li></li>
+            <li></li>
+
+          </ul>
+      </section>
     </main>
 
     <footer>
