added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -18,8 +19,9 @@
 
           <ul>
 
-            <li></li>
-            <li></li>
+            <li>DOCTYPE declaration defines that the document is a HTML5 document</li>
+            <li>Head: is the element which contains meta information</li>
+            <li>title: is the element which specifies a title for the html page.</li>
 
           </ul>
           
@@ -29,10 +31,8 @@
         <h2>CSS</h2>
 
           <ul>
-
-            <li>DOCTYPE declaration defines that the document is a HTML5 document</li>
-            <li>Head: is the element which contains meta information</li>
-            <li>title: is the element which specifies a title for the html page.</li>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>A padding indicates how much space we want around the content inside an element.</li>
 
           </ul>
       </section>
